--- a/eventos.html
+++ b/eventos.html
@@ -1,108 +1,159 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Eventos e Camp</title>
-<link href="global.css" rel="stylesheet"/><script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Eventos e Camp</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' } } } }
+    }
+  </script>
+  <script src="https://unpkg.com/lucide@latest"></script>
 
-<script src="https://unpkg.com/lucide@latest"></script>
+  <style>
+    /* micro UX */
+    .reveal { opacity: 0; transform: translateY(18px); filter: blur(2px); transition: opacity .55s ease, transform .55s ease, filter .55s ease; }
+    .reveal.show { opacity: 1; transform: translateY(0); filter: blur(0); }
 
+    .btn-spinner{
+      width:18px;height:18px;border-radius:999px;border:2px solid rgba(255,255,255,.55);
+      border-top-color:rgba(255,255,255,0);display:inline-block;animation:spin .9s linear infinite;
+    }
+    @keyframes spin{to{transform:rotate(360deg)}}
+
+    /* drawer */
+    .drawer-backdrop{ opacity:0; pointer-events:none; transition: opacity .25s ease; }
+    .drawer-backdrop.show{ opacity:1; pointer-events:auto; }
+    .drawer-panel{ transform: translateX(110%); transition: transform .35s cubic-bezier(.2,.9,.2,1); }
+    .drawer-panel.show{ transform: translateX(0); }
+  
+  .dd { position: relative; }
+  .dd-btn { width: 100%; display:flex; align-items:center; justify-content:space-between; gap:.75rem; border-radius: 1rem;
+    background: rgba(255,255,255,.9); border:1px solid rgba(15,23,42,.14); padding: .75rem 1rem; font-size: .875rem;
+    outline:none; }
+  .dd-btn:focus { box-shadow: 0 0 0 4px rgba(16,185,129,.18); border-color: rgba(16,185,129,.55); }
+  .dd-menu { position:absolute; left:0; right:0; top: calc(100% + .5rem); background:#ffffff; color:#0f172a;
+    border:1px solid rgba(15,23,42,.12); border-radius: 1rem; overflow:hidden; z-index:40;
+    box-shadow: 0 20px 60px rgba(2,6,23,.18); }
+  .dd-item { width:100%; text-align:left; padding:.7rem 1rem; font-size:.875rem; display:flex; align-items:center; gap:.6rem; }
+  .dd-item:hover { background: rgba(15,23,42,.06); }
+  .dd-item[aria-selected="true"] { background: rgba(16,185,129,.16); color:#065f46; font-weight:800; }
+
+
+  .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
+</style>
 </head>
-<body class="min-h-screen bg-white text-slate-900 gh-body">
-<div class="fixed inset-0 z-40 hidden bg-black/40" id="sidebar-overlay"></div>
-<aside class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform" id="sidebar">
-<div class="p-4 border-b border-slate-200 flex items-center justify-between">
-<div class="flex items-center gap-2">
-<div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-<i class="h-5 w-5 text-emerald-700" data-lucide="shield"></i>
-</div>
-<div class="leading-tight">
-<div class="text-slate-900 font-black">Guilda • HUB</div>
-<div class="text-xs text-slate-500">Eventos • Camps</div>
-</div>
-</div>
-<button class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100" id="sidebar-close">
-<i class="h-5 w-5 text-slate-700" data-lucide="x"></i>
-</button>
-</div>
-<nav class="p-3 space-y-1">
-<a class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100" href="index.html">
-<i class="h-4 w-4" data-lucide="home"></i>
-<span class="font-semibold">Início</span>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100" href="eventos.html">
-<i class="h-4 w-4" data-lucide="calendar"></i>
-<span class="font-semibold">Eventos e Camp</span>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100" href="stats.html">
-<i class="h-4 w-4" data-lucide="bar-chart-3"></i>
-<span class="font-semibold">Minhas estatísticas</span>
-</a>
-<a class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100" href="suporte.html">
-<i class="h-4 w-4" data-lucide="help-circle"></i>
-<span class="font-semibold">Suporte</span>
-</a>
-</nav>
-<div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
-<div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
-</div>
-</aside>
+<body class="min-h-screen bg-white text-slate-900">
+
+  
+  <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
+  <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
+    <div class="p-4 border-b border-slate-200 flex items-center justify-between">
+      <div class="flex items-center gap-2">
+        <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
+          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
+        </div>
+        <div class="leading-tight">
+          <div class="text-slate-900 font-black">Guilda • HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps</div>
+        </div>
+      </div>
+      <button id="sidebar-close" class="h-10 w-10 grid place-items-center rounded-xl hover:bg-slate-100">
+        <i data-lucide="x" class="h-5 w-5 text-slate-700"></i>
+      </button>
+    </div>
+
+    <nav class="p-3 space-y-1">
+      <a href="index.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
+        <i data-lucide="home" class="h-4 w-4"></i>
+        <span class="font-semibold">Início</span>
+      </a>
+      <a href="eventos.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
+        <i data-lucide="calendar" class="h-4 w-4"></i>
+        <span class="font-semibold">Eventos e Camp</span>
+      </a>
+      <a href="stats.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
+        <i data-lucide="bar-chart-3" class="h-4 w-4"></i>
+        <span class="font-semibold">Minhas estatísticas</span>
+      </a>
+      <a href="suporte.html" class="flex items-center gap-3 px-3 py-2 rounded-xl text-slate-700 hover:bg-slate-100">
+        <i data-lucide="help-circle" class="h-4 w-4"></i>
+        <span class="font-semibold">Suporte</span>
+      </a>
+    </nav>
+
+    <div class="mt-auto p-4 text-xs text-slate-500 border-t border-white/10">
+      <div class="leading-relaxed">Dica: você pode navegar sem login para ver eventos e consultar stats públicas.</div>
+    </div>
+  </aside>
+
 <header class="sticky top-0 z-30 bg-white/80 backdrop-blur border-b border-slate-200">
-<div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
-<div class="flex items-center gap-3">
-<button class="h-10 w-10 grid place-items-center rounded-xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm hover:bg-slate-50" id="sidebar-open">
-<i class="h-5 w-5 text-slate-900" data-lucide="menu"></i>
-</button>
-<div class="leading-tight">
-<div class="font-black text-slate-900">Guilda • HUB</div>
-<div class="text-xs text-slate-500">Eventos • Camps</div>
-</div>
-</div>
-<a class="text-sm font-semibold text-emerald-700 hover:text-emerald-800" href="index.html">Voltar</a>
-</div>
-</header>
+    <div class="mx-auto w-full max-w-6xl px-4 py-3 flex items-center justify-between">
+      <div class="flex items-center gap-3">
+        <button id="sidebar-open" class="h-10 w-10 grid place-items-center rounded-xl bg-white ring-1 ring-slate-200 text-slate-900 shadow-sm hover:bg-slate-50">
+          <i data-lucide="menu" class="h-5 w-5 text-slate-900"></i>
+        </button>
+        <div class="leading-tight">
+          <div class="font-black text-slate-900">Guilda • HUB</div>
+          <div class="text-xs text-slate-500">Eventos • Camps</div>
+        </div>
+      </div>
+      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
+    </div>
+  </header>
+
+
+  
+
+
+
+
 <main class="mx-auto w-full max-w-6xl px-4 py-6">
 <section class="space-y-4">
-<div class="flex flex-col gap-3 sm:flex-row sm:items-end sm:justify-between">
-<div class="flex-1">
-<label class="text-xs text-slate-500">Pesquisar</label>
-<input class="mt-1 w-full rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" id="q" placeholder="Ex: nome da guilda, título, descrição..." type="text"/>
-</div>
-<div class="w-full sm:w-[280px]">
-<label class="text-xs text-slate-500">Filtro</label>
-<div class="relative mt-1">
-<input id="filter" type="hidden" value="all"/>
-<div class="dd">
-<button class="dd-btn" id="filterBtn" type="button">
-<span class="font-semibold text-slate-900" id="filterLabel">Todos</span>
-<i class="h-4 w-4 text-slate-600" data-lucide="chevron-down"></i>
-</button>
-<div class="dd-menu hidden" id="filterMenu">
-<button aria-selected="true" class="dd-item" data-value="all" type="button"><i class="h-4 w-4" data-lucide="layers"></i>Todos</button>
-<button class="dd-item" data-value="br" type="button"><i class="h-4 w-4" data-lucide="zap"></i>Battle Royale</button>
-<button class="dd-item" data-value="xvx" type="button"><i class="h-4 w-4" data-lucide="swords"></i>XvX (1v1, 2v2...)</button>
-<button class="dd-item" data-value="paid" type="button"><i class="h-4 w-4" data-lucide="badge-dollar-sign"></i>Pago</button>
-<button class="dd-item" data-value="free" type="button"><i class="h-4 w-4" data-lucide="leaf"></i>Gratuito</button>
-<button class="dd-item" data-value="prize" type="button"><i class="h-4 w-4" data-lucide="trophy"></i>Com premiação</button>
-<button class="dd-item" data-value="solo" type="button"><i class="h-4 w-4" data-lucide="user"></i>Solo</button>
-<button class="dd-item" data-value="duo" type="button"><i class="h-4 w-4" data-lucide="users"></i>Duo</button>
-<button class="dd-item" data-value="squad" type="button"><i class="h-4 w-4" data-lucide="users-2"></i>Squad</button>
-<button class="dd-item" data-value="1v1" type="button"><i class="h-4 w-4" data-lucide="swords"></i>1v1</button>
-<button class="dd-item" data-value="2v2" type="button"><i class="h-4 w-4" data-lucide="swords"></i>2v2</button>
-<button class="dd-item" data-value="3v3" type="button"><i class="h-4 w-4" data-lucide="swords"></i>3v3</button>
-<button class="dd-item" data-value="4v4" type="button"><i class="h-4 w-4" data-lucide="swords"></i>4v4</button>
-</div>
-</div>
-<i class="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2 h-4 w-4 text-slate-500" data-lucide="chevron-down"></i>
-</div>
-</div>
-</div>
-<div class="text-sm text-slate-500" id="status"></div>
-<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3" id="grid"></div>
+  <div class="flex flex-col gap-3 sm:flex-row sm:items-end sm:justify-between">
+    <div class="flex-1">
+      <label class="text-xs text-slate-500">Pesquisar</label>
+      <input id="q" type="text" placeholder="Ex: nome da guilda, título, descrição..."
+        class="mt-1 w-full rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
+    </div>
+    <div class="w-full sm:w-[280px]">
+      <label class="text-xs text-slate-500">Filtro</label>
+      <div class="relative mt-1">
+        
+        <input type="hidden" id="filter" value="all" />
+        <div class="dd">
+          <button type="button" id="filterBtn" class="dd-btn">
+            <span id="filterLabel" class="font-semibold text-slate-900">Todos</span>
+            <i data-lucide="chevron-down" class="h-4 w-4 text-slate-600"></i>
+          </button>
+          <div id="filterMenu" class="dd-menu hidden">
+            <button type="button" class="dd-item" data-value="all" aria-selected="true"><i data-lucide="layers" class="h-4 w-4"></i>Todos</button>
+            <button type="button" class="dd-item" data-value="br"><i data-lucide="zap" class="h-4 w-4"></i>Battle Royale</button>
+            <button type="button" class="dd-item" data-value="xvx"><i data-lucide="swords" class="h-4 w-4"></i>XvX (1v1, 2v2...)</button>
+            <button type="button" class="dd-item" data-value="paid"><i data-lucide="badge-dollar-sign" class="h-4 w-4"></i>Pago</button>
+            <button type="button" class="dd-item" data-value="free"><i data-lucide="leaf" class="h-4 w-4"></i>Gratuito</button>
+            <button type="button" class="dd-item" data-value="prize"><i data-lucide="trophy" class="h-4 w-4"></i>Com premiação</button>
+            <button type="button" class="dd-item" data-value="solo"><i data-lucide="user" class="h-4 w-4"></i>Solo</button>
+            <button type="button" class="dd-item" data-value="duo"><i data-lucide="users" class="h-4 w-4"></i>Duo</button>
+            <button type="button" class="dd-item" data-value="squad"><i data-lucide="users-2" class="h-4 w-4"></i>Squad</button>
+            <button type="button" class="dd-item" data-value="1v1"><i data-lucide="swords" class="h-4 w-4"></i>1v1</button>
+            <button type="button" class="dd-item" data-value="2v2"><i data-lucide="swords" class="h-4 w-4"></i>2v2</button>
+            <button type="button" class="dd-item" data-value="3v3"><i data-lucide="swords" class="h-4 w-4"></i>3v3</button>
+            <button type="button" class="dd-item" data-value="4v4"><i data-lucide="swords" class="h-4 w-4"></i>4v4</button>
+          </div>
+        </div>
+
+        <i data-lucide="chevron-down" class="pointer-events-none absolute right-3 top-1/2 -translate-y-1/2 h-4 w-4 text-slate-500"></i>
+      </div>
+    </div>
+  </div>
+  <div id="status" class="text-sm text-slate-500"></div>
+  <div id="grid" class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"></div>
 </section>
 </main>
+
 <script>
 (function(){
   const openBtn = document.getElementById('sidebar-open');
@@ -125,6 +176,7 @@
   document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') close(); });
 })();
 </script>
+
 <script>lucide.createIcons();</script>
 <script type="module">
 
